--- a/code/UI/MainMenuPanel.razor.scss
+++ b/code/UI/MainMenuPanel.razor.scss
@@ -1,4 +1,4 @@
-MainMenuPanel
+.main-menu
 {
 	position: absolute;
 	top: 0;
@@ -10,8 +10,14 @@ MainMenuPanel
 	color: white;
 	font-size: 32px;
 	padding: 32px;
-	pointer-events: all;
+	
 	gap: 16px;
+
+	&.hidden
+	{
+		opacity: 0;
+		visibility: hidden;
+	}
 	
 	> .header
 	{
@@ -29,6 +35,7 @@ MainMenuPanel
 	> .content
 	{
 		gap: 32px;
+		pointer-events: all;
 
 		> .map-select
 		{
