--- a/code/UI/PauseMenuPanel.razor
+++ b/code/UI/PauseMenuPanel.razor
@@ -143,6 +143,7 @@
 	{
 		var mapInstance = Scene.Components.Get<MapInstance>(FindMode.EnabledInSelfAndDescendants);
 		mapInstance.MapName = mapIdent;
+		Scene.Title = mapIdent;
 	}
 	
 	protected override int BuildHash() => System.HashCode.Combine( refreshing, Visible );
