--- a/code/UI/HangoutHud.razor.scss
+++ b/code/UI/HangoutHud.razor.scss
@@ -6,63 +6,108 @@ HangoutHud
 	right: 0;
 	bottom: 0;
 
-	> .player-list
+	> .crosshair
 	{
 		position: absolute;
-		left: 30%;
-		width: 40%;
-		top: 20%;
-		height: 60%;
-		background-color: rgba( black, 0.8 );
+		top: 50%;
+		left: 50%;
+		transform: translate( -50%, -50% );
+		width: 2px;
+		height: 2px;
+		background-color: white;
+	
+	}
+
+	> .menu
+	{
+		position: absolute;
+		left: 10%;
+		width: 80%;
+		top: 10%;
+		height: 80%;
+		background-color: rgba( black, 0.6 );
 		border-radius: 24px;
-		flex-direction: column;
 		padding: 16px;
+		backdrop-filter: blur( 10px );
 
-		> .player-entry
+		&.hidden
 		{
-			background-color: rgba( white, 0.8 );
-			flex-direction: row;
-			padding: 6px;
-			margin-bottom: 5px;
-			align-items: center;
-			align-content: center;
-			border-radius: 4px;
-			overflow: hidden;
-			transition: all 0.1s ease-out;
-			color: black;
-			border-radius: 12px;
+			opacity: 0;
+		}
 
-			&:intro
+		> .spawn-menu
+		{
+			flex-grow: 1;
+			pointer-events: all;
+
+			packagefilterfacet, packagefilterorder
 			{
-				opacity: 0;
-				margin-left: 20px;
+				background-color: white;
+				color: black;
+			}
+			TextEntry
+			{
+				background-color: rgba(white, 0.2);
 			}
 
-			&:outro
+			color: white;
+		}
+
+		> .player-list
+		{
+			flex-direction: column;
+			padding: 16px;
+			gap: 8px;
+			flex-shrink: 0;
+			width: 400px;
+			overflow: scroll;
+
+			> .player-entry
 			{
-				opacity: 0;
-				margin-left: 20px;
+				background-color: rgba( white, 0.8 );
+				flex-direction: row;
+				padding: 6px;
+				margin-bottom: 5px;
+				align-items: center;
+				align-content: center;
+				border-radius: 4px;
+				overflow: hidden;
 				transition: all 0.1s ease-out;
-			}
+				color: black;
+				border-radius: 12px;
+				flex-shrink: 0;
 
-			.avatar
-			{
-				min-width: 50px;
-				width: 50px;
-				height: 50px;
-				border-radius: 50%;
-			}
+				&:intro
+				{
+					opacity: 0;
+					margin-left: 20px;
+				}
 
-			.name
-			{
-				font-size: 28px;
-				font-weight: 500;
-				margin-left: 10px;
-				flex-grow: 1;
-				font-family: Poppins;
+				&:outro
+				{
+					opacity: 0;
+					margin-left: 20px;
+					transition: all 0.1s ease-out;
+				}
+
+				.avatar
+				{
+					min-width: 50px;
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+				}
+
+				.name
+				{
+					font-size: 28px;
+					font-weight: 500;
+					margin-left: 10px;
+					flex-grow: 1;
+					font-family: Poppins;
+				}
 			}
 		}
-	
 	}
 
 	> .voice-list
