--- a/code/UI/Chat/Chatbox.razor
+++ b/code/UI/Chat/Chatbox.razor
@@ -78,7 +78,7 @@
         {
             var friend = new Friend(steamId);
             name = friend.Name;
-            steamId = friend.Id;
+            steamId = (long)friend.Id;
         }
         else
         {
